--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>ErenΣ(°Д°; web</title>                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,41 +16,41 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change for your own title for the banner-->
+          <a href="index.html">( ՞ټ՞)Eren Art Gallery</a> <!--Change for your own title for the banner-->
         </h1>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html">( *・ω・)✄╰ひ╯Home</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>LUVORATORRRRRY!</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+      Aha, this is my web gallery,well~come and look at it, maybe you will have some fun on here. well this is my first web design,i'm so happy that everyone can look at my own design.             <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a data-lightbox="image-1" href="img/brunobig.jpg"> <!--Add your own big jpg-->
-            <img src="img/brunosmall.jpg">                 <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art1big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art1small.jpg">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-2-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art2big2.jpg"> <!--Add your own big jpg-->
+            <img src="img/art2small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-3-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art3big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art3small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-4-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art4big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art4small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +60,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your artwork-->
+        <p>This design sometime looks easy,but sometime looks difficult.  When i still is a beginer of design this webgallery, i don't know how to did and create some picture, everything looked hard and strange, i had never touch this before, so everything was make felf excited.Because my teacher was prepare the webgallery package for alreadly,so our work was pretty easy,just changed some order and put our creation.But sometime i am so stupid; for example, my all stuff(pictures)was done,i put it into the order, but i forgot to add "jpg" after the picture name, so, when i opened the web, it coulldn't be show on the net. of course i felt anxious,because everything was done expect this, i would felt unhappy,felt frustrate.Fortunately, my teacher helped me found the problem; i forgot to add the "jpg". Haha（ ´☣///_ゝ///☣｀）</p>      <!--Reflections about your artwork-->
       </div>
     </footer>
   </body>
